--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Test Page</title>
+    <title>Learning Front End Development</title>
     <meta charset="utf-8">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Learning GIT and Front End</h1>
-    <img src="images/github.png" alt="What we learn with joy, we never forget.">
-    <p>I am currently in the process of going through <a href="http://www.theodinproject.com">The Odin Project</a> course curriculum. With a background in Graphic Design I am working to expand my skillset into Web Development. While using this time to learn the bare basics of
+    <img src="images/top.png" alt="What we learn with joy, we never forget.">
+    <p>I am currently in the process of going through <a href="http://www.theodinproject.com">The Odin Project</a> course curriculum. With a background in Graphic Design I am working to expand my skillset into Web Development. While using this time to learn the bare basics of</P>
 
       <ul>
         <li>HTML</li>
@@ -15,6 +17,6 @@
         <li>and Javascript</li>
       </ul>
 
-      I will also be using git. As I go through the steps on this little webpage there will be a new commit for each added feature. Such as an added Stylesheet or Javascript function. While a basic task, it will help to reinforce my knowledge of all the resources. </p>
+      <p>I will also be using git. As I go through the steps on this little webpage there will be a new commit for each added feature. Such as an added Stylesheet or Javascript function. While a basic task, it will help to reinforce my knowledge of all the resources. </p>
   </body>
 </html>
