Added a image changer function and a custom site welcome message. With option to change user.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Learning GIT and Front End</h1>
+    <h1>Learning GIT and Front End Dev</h1>
     <img src="images/top.png" alt="What we learn with joy, we never forget.">
     <p>I am currently in the process of going through <a href="http://www.theodinproject.com">The Odin Project</a> course curriculum. With a background in Graphic Design I am working to expand my skillset into Web Development. While using this time to learn the bare basics of</P>
 
@@ -18,5 +18,7 @@
       </ul>
 
       <p>I will also be using git. As I go through the steps on this little webpage there will be a new commit for each added feature. Such as an added Stylesheet or Javascript function. While a basic task, it will help to reinforce my knowledge of all the resources. </p>
+      <button>Change user</button>
+      <script src="js/main.js"></script>
   </body>
 </html>
